added data as a separate parameter for charts and made options optional

--- a/src/examples/area-dual-axes.html
+++ b/src/examples/area-dual-axes.html
@@ -12,82 +12,86 @@
 <body>
     <div id="chart" />
     <script>
-		var settings = {
-			"plotArea": {
-				"padding": 20
-			},
-			"linechart": {
+
+        var data = {
+            "categories": {
+                "format": "%s",
+                "data": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
+            },
+            "series": {
+                "name": "Population",
+                "items":	[{
+                    "name": "Rainfall",
+                    "data": [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4],
+                    "type": "column",
+                    "suffix": " mm"
+                },
+                    {
+                        "name": "Temperature",
+                        "data": [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6],
+                        "type": "line",
+                        "suffix": " °C"
+                    }]
+            }
+        };
+
+        var options = {
+            "plotArea": {
+                "padding": 20
+            },
+            "linechart": {
                 "area": {
                     "visible": true
                 },
-				"interpolation": "linear",
+                "interpolation": "linear",
                 "markers": {
                     "visible": true,
                     "type": "circle"
                 }
-			},
-			"legend": {
-				"title": "Rainfall vs Temperature",
-				"position": "right",
-				"width": 200
-			},
-			"title": {
-				"text": "Area Chart - Dual Axes",
-				"align": "center",
-				"height": 50,
-				"margin": 15
-			},
-			"yAxis": [{
-					"name": "Rainfall",
-					"gridlines": "none",
-					"orient": "left",
-					"tickmarks": true,
-					"title": {
-						"text": "mm"
-					}
-				},{
-					"name": "Temperature",
-					"gridlines": "none",
-					"orient": "right",
-					"tickmarks": true,
-					"title": {
-						"text": "°C"
-					}
-			}],
-			"xAxis": {
-				"gridlines": "none",
-				"orient": "left",
-				"tickmarks": true,
-				"title": {
-					"text": "Month"
-				}
-			},
-			"tooltip": {
-				"title": "Rainfall vs Temperature",
-				"showPercent": true
-			},
-			"categories": {
-				"format": "%s",
-				"data": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
-			},
-			"series": {
-				"name": "Population",
-				"items":	[{
-						"name": "Rainfall",
-						"data": [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4],
-						"type": "column",
-						"suffix": " mm"
-					}, 
-					{
-						"name": "Temperature",
-						"data": [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6],
-						"type": "line",
-						"suffix": " °C"
-					}]
-			}
-		};
+            },
+            "legend": {
+                "title": "Rainfall vs Temperature",
+                "position": "right",
+                "width": 200
+            },
+            "title": {
+                "text": "Area Chart - Dual Axes",
+                "align": "center",
+                "height": 50,
+                "margin": 15
+            },
+            "yAxis": [{
+                "name": "Rainfall",
+                "gridlines": "none",
+                "orient": "left",
+                "tickmarks": true,
+                "title": {
+                    "text": "mm"
+                }
+            }, {
+                "name": "Temperature",
+                "gridlines": "none",
+                "orient": "right",
+                "tickmarks": true,
+                "title": {
+                    "text": "°C"
+                }
+            }],
+            "xAxis": {
+                "gridlines": "none",
+                "orient": "left",
+                "tickmarks": true,
+                "title": {
+                    "text": "Month"
+                }
+            },
+            "tooltip": {
+                "title": "Rainfall vs Temperature",
+                "showPercent": true
+            }
+        };
 
-		var chart = new frnk.UI.Charts.LineChart("#chart", settings);
+		var chart = new frnk.UI.Charts.LineChart("#chart", data, options);
 		chart.draw();
     </script>
 </body>
