--- a/src/examples/area-spline.html
+++ b/src/examples/area-spline.html
@@ -12,66 +12,69 @@
 <body>
     <div id="chart" />
     <script>
-		var settings = {
-			"plotArea": {
-				"padding": 20
-			},
-			"linechart": {
+        var data = {
+            "categories": {
+                "format": "%s",
+                "data": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
+            },
+            "series": {
+                "items": [{
+                    "name": "John",
+                    "data": [3, 4, 3, 5, 4, 10, 12]
+                }, {
+                    "name": "Jane",
+                    "data": [1, 3, 4, 3, 3, 5, 4]
+                }]
+            }
+        };
+
+        var options = {
+            "plotArea": {
+                "padding": 20
+            },
+            "linechart": {
                 "area": {
                     "visible": true
                 },
-				"interpolation": "cardinal",
+                "interpolation": "cardinal",
                 "markers": {
                     "visible": true
                 }
-			},
-			"legend": {
-				"title": "Who?",
-				"position": "right",
-				"width": 200
-			},
-			"title": {
-				"text": "Area Chart - Spline",
-				"align": "center",
-				"height": 50
-			},
-			"xAxis": [{
-				"gridlines": "none",
-				"labels": {
-					"rotate": 0
-				},
-				"tickmarks": false,
-				"title": { 
-					"text": "Day"
-				}
-			}],
-			"yAxis": [{
-				"gridlines": "none",
-				"tickmarks": true,
-				"title": {
-					"text": "Fruit Units"
-				}
-			}],
-			"tooltip": { 
-				"title": "Fruit Units",
-				"valueSuffix": " fruits"
-			},
-			"categories": {
-				"format": "%s",
-				"data": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
-			},
-			"series": {
-				"items": [{
-						"name": "John",
-						"data": [3, 4, 3, 5, 4, 10, 12]
-					}, {
-						"name": "Jane",
-						"data": [1, 3, 4, 3, 3, 5, 4]
-				}]
-			}
-		};
+            },
+            "legend": {
+                "title": "Who?",
+                "position": "right",
+                "width": 200
+            },
+            "title": {
+                "text": "Area Chart - Spline",
+                "align": "center",
+                "height": 50
+            },
+            "xAxis": [{
+                "gridlines": "none",
+                "labels": {
+                    "rotate": 0
+                },
+                "tickmarks": false,
+                "title": {
+                    "text": "Day"
+                }
+            }],
+            "yAxis": [{
+                "gridlines": "none",
+                "tickmarks": true,
+                "title": {
+                    "text": "Fruit Units"
+                }
+            }],
+            "tooltip": {
+                "title": "Fruit Units",
+                "valueSuffix": " fruits"
+            }
+        };
 
-		var chart = new frnk.UI.Charts.LineChart("#chart", settings);
+		var chart = new frnk.UI.Charts.LineChart("#chart", data, options);
 		chart.draw();
     </script>
 </body>
