--- a/src/examples/bar-stacked.html
+++ b/src/examples/bar-stacked.html
@@ -12,60 +12,63 @@
 <body>
     <div id="chart" />
     <script>
-		var settings = {
-			"plotArea": {
-				"padding": 20
-			},
-			"legend": {
-				"title": "Who?",
-				"position": "right",
-				"width": 200
-			},
-			"title": {
-				"text": "Bar Chart - Stacked",
-				"align": "center",
-				"height": 50
-			},
-			"xAxis": [{
-				"gridlines": "major",
-				"labels": {
-					"rotate": 0
-				},
-				"tickmark": false,
-				"title": { 
-					"text": ""
-				}
-			}],
-			"yAxis": [{
-				"gridlines": "none",
-				"tickmark": true,
-				"title": {
-					"text": ""
-				}
-			}],
-			"tooltip": { 
-				"title": "Fruit Units",
-				"valueSuffix": " fruits"
-			},
-			"categories": {
-				"format": "%s",
-				"data": ["Apples", "Oranges", "Pears", "Grapes", "Bananas"]
-			},
-			"series": {
-				"items": [{
-						"name": "John",
-						"data": [5, 3, 4, 7, 2]
-					}, {
-						"name": "Jane",
-						"data": [2, 2, 3, 2, 1]
-					}, {
-						"name": "Joe",
-						"data": [3, 4, 4, 2, 5]
-					}]
-			}
-		};
+        var data = {
+            "categories": {
+                "format": "%s",
+                "data": ["Apples", "Oranges", "Pears", "Grapes", "Bananas"]
+            },
+            "series": {
+                "items": [{
+                    "name": "John",
+                    "data": [5, 3, 4, 7, 2]
+                }, {
+                    "name": "Jane",
+                    "data": [2, 2, 3, 2, 1]
+                }, {
+                    "name": "Joe",
+                    "data": [3, 4, 4, 2, 5]
+                }]
+            }
+        };
 
-		var chart = new frnk.UI.Charts.StackedBarChart("#chart", settings);
+        var options = {
+            "plotArea": {
+                "padding": 20
+            },
+            "legend": {
+                "title": "Who?",
+                "position": "right",
+                "width": 200
+            },
+            "title": {
+                "text": "Bar Chart - Stacked",
+                "align": "center",
+                "height": 50
+            },
+            "xAxis": [{
+                "gridlines": "major",
+                "labels": {
+                    "rotate": 0
+                },
+                "tickmark": false,
+                "title": {
+                    "text": ""
+                }
+            }],
+            "yAxis": [{
+                "gridlines": "none",
+                "tickmark": true,
+                "title": {
+                    "text": ""
+                }
+            }],
+            "tooltip": {
+                "title": "Fruit Units",
+                "valueSuffix": " fruits"
+            }
+        };
+
+		var chart = new frnk.UI.Charts.StackedBarChart("#chart", data, options);
 		chart.draw();
     </script>
 </body>
